Added the new endpoint
